# v4l2capture-ces2017-cluster

./: CMakeLists.txt  make_all.sh  toolchain.cmake
cmake/: FindEGL.cmake  FindGLESv2.cmake  FindPNG.cmake  FindPixman.cmake  FindWayland.cmake
include/: capture.h  context.h  egl.h  image_process.h  settings.h  v4l2.h  wayland.h
src/: capture.cpp  context.cpp  egl.cpp  image_process.cpp  ivi-application-protocol.c  main.cpp  v4l2.cpp  wayland.cpp
