cmake_minimum_required(VERSION 2.6)
PROJECT(ivi-v4l2capture)

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE (GLESv2 REQUIRED)
FIND_PACKAGE (EGL REQUIRED)
FIND_PACKAGE (Wayland REQUIRED)

INCLUDE_DIRECTORIES(
	include
	${GLESv2_INCLUDE_DIR}
	${EGL_INCLUDE_DIR}
	${WAYLAND_CLIENT_INCLUDE_DIR}
	)

FILE(GLOB COMMON_SOURCES
	src/*.cpp
	src/*.c
	)

ADD_EXECUTABLE(${PROJECT_NAME} ${COMMON_SOURCES})

SET(LIBS
	-lpthread
	${GLESv2_LIBRARY}
	${EGL_LIBRARY}
	${WAYLAND_CLIENT_LIBRARY}
	${WAYLAND_EGL_LIBRARY}
	)

IF(EGL_FOUND)
	ADD_DEFINITIONS(-DMESA_EGL_NO_X11_HEADERS)
ENDIF(EGL_FOUND)

ADD_DEFINITIONS(-DDEBUG_)
ADD_DEFINITIONS(-DWL_EGL_PLATFORM)

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	${LIBS}
	)
